force-app/main/default/objects/CustomSchedule__c/CustomSchedule__c.object-meta.xml
<CustomObject>
    <label>Custom Schedule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>