force-app/main/default/objects/CustomSchedule__c/fields/baseSchedule__c.field-meta.xml
<CustomField>
    <fullName>baseSchedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Base Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Custom Schedules</relationshipLabel>
    <relationshipName>CustomSchedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>