force-app/main/default/objects/CustomSchedule__c/fields/baseScheduleType__c.field-meta.xml
<CustomField>
    <fullName>baseScheduleType__c</fullName>
    <description>Parent Schedule Usage Type</description>
    <formula>TEXT(baseSchedule__r.scheduleType__c)</formula>
    <inlineHelpText>Parent Schedule Usage Type</inlineHelpText>
    <label>Schedule Type</label>
    <type>Text</type>
</CustomField>