force-app/main/default/objects/CustomSchedule__c/fields/RT_Custom_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_Custom_Schedule_ID__c</fullName>
    <externalId>true</externalId>
    <label>RT Custom Schedule ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>